--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
         <link href="style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
+
         <button id="btn">Next</button>
+
+        <canvas id="board" />
+
+        
+
         <div id="node" />
         
         <script async type="text/javascript" src="app.js" charset="utf-8"></script>
