--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <html>
     <head>
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <link href="style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
 
-        <button id="btn">Next</button>
+        <div class="header">
+            <button id="btn">Play</button>
+            <p>Generation: <span id="generation"></span></p>
+        </div>
 
-        <canvas id="board" />
+        <div class="container">
+            <canvas id="board" />
+        </div>
 
-        
-
-        <div id="node" />
-        
         <script async type="text/javascript" src="app.js" charset="utf-8"></script>
     </body>
 </html>
