Adding FPS counter

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <div class="header">
             <button id="btn">Play</button>
             <p>Generation: <span id="generation"></span></p>
+            <div id="counter"></div>
         </div>
 
         <div class="container">
