--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
             <canvas id="board" />
         </div>
 
-        <script async type="text/javascript" src="app.js" charset="utf-8"></script>
+        <script async type="text/javascript" src="bundle.js" charset="utf-8"></script>
     </body>
 </html>
