--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-        <link href="style.css" rel="stylesheet" type="text/css">
+        <link href="./style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
 
@@ -15,6 +15,6 @@
             <canvas id="board" />
         </div>
 
-        <script async type="text/javascript" src="bundle.js" charset="utf-8"></script>
+        <script async type="text/javascript" src="./app.js" charset="utf-8"></script>
     </body>
 </html>
