--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
       name="description"
       content="Conway's game of life, in WebGL and JavaScript"
     />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <title>Conway's Game of Life</title>
   </head>
   <body>
